# authentication_service

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/docs/: README.md
src/router/: mod.rs
src/router/authentication/: mod.rs
src/router/authorization/: mod.rs
src/router/home/: mod.rs
src/router/libs/: mod.rs
src/router/libs/adapter/: mod.rs
src/router/libs/adapter/kafka/: mod.rs
src/router/libs/adapter/log/: mod.rs  setting.rs  usecase.rs
src/router/libs/adapter/mongo/: mod.rs
src/router/libs/constant/: mod.rs
src/router/libs/domain/: jwt.rs  mod.rs  model.rs  repository.rs  usecase.rs  utilities.rs  validator.rs
src/router/libs/infrastructure/: mod.rs
src/router/libs/infrastructure/appstate/: mod.rs
src/router/libs/infrastructure/distributed_lock/: mod.rs
src/router/libs/infrastructure/kafka/: mod.rs
src/router/libs/infrastructure/mongo/: mod.rs
src/router/libs/infrastructure/redis/: mod.rs
src/tests/: mod.rs
