[package]
name = "authentication_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6.1"
actix-rt = "2.7.0"
actix-session = "0.6.2"
actix-redis = "0.11.0"
actix = "0.13.0"
tokio = "1.8.5"
chrono = "0.4.19"
mongodb = "2.2.2"
bson = "2.3.0"
env_logger = "0.9.0"
dotenv = "0.15.0"
futures = "0.3.4"
serde =  {version = "1.0.103", features = ["derive"] }
json = "0.12.4"
serde_json = "1.0"
async-trait = "0.1.56"
redis = { version = "0.21.5", features = ["tls"] }
redlock = "1.2.0"
rdkafka = "0.28.0"
rdkafka-sys = "4.2.0+1.8.2"
rand = "0.8.5"
jsonwebtoken = "8.1.1"
time = "0.3.11"

[dev-dependencies]
lazy_static = "1.4.0"
async_once = "0.2.6"
bytes = "1.1.0"
byte_string = "1.0.0"
tinyjson = "2.3.0"
